welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:5: error: unclosed string literal
 while (getCouleurSol()==Color.yellow);"
                                       ^